# tkm_tr_en_nlp_platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
app/: data_utils.py
app/api/: main.py  schemas.py
app/api/routes/: __init__.py  classify.py  compare.py  languages.py  search.py
app/core/: config.py  logger.py  paths.py
app/models/baseline/: __init__.py  tfidf_classifier.py
app/models/embedding/: __init__.py  embedder.py  search_index.py
app/preprocessing/: cleaner.py  language_detector.py
app/services/: classifier_service.py  search_service.py
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.dashboard
scripts/: build_embeddings.py  preprocess.py  train_baseline.py
tests/: test_preprocessing.py
