[project]
name = "tkm-tr-en-nlp-platform"
version = "0.1.0"

dependencies = [
    "pandas",
    "numpy",
    "joblib",
    "langdetect",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "sentence-transformers",
    "streamlit",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
